--- a/OneMainWeb/OneMain.Master
+++ b/OneMainWeb/OneMain.Master
@@ -11,6 +11,12 @@
     
 	<script type="text/javascript" src="/ckeditor/ckeditor.js"></script>
     <script type="text/javascript" src="/JavaScript/one.js"></script>
+
+    <script type="text/javascript" src="/JavaScript/jquery-1.3.2.min.js"></script>
+    <script type="text/javascript" src="/JavaScript/jquery.bgiframe.min.js"></script>
+    <script type="text/javascript" src="/JavaScript/jquery.autocomplete.min.js"></script>
+    <script type="text/javascript" src="/JavaScript/jquery.validate.min.js"></script> 
+    <script type="text/javascript" src="/JavaScript/additional-methods.js"></script> 
 	
 	<script type="text/javascript">
 
