--- a/OneMainWeb/Utils/one.css
+++ b/OneMainWeb/Utils/one.css
@@ -88,7 +88,7 @@ div {float:left}
 .cc-m-Horizontal ul li.sel span {background-position:right -50px;color: #fff;font-weight:bold;text-decoration: none;}
 
 
-.left-col ul {margin: 0; padding:0; width: 170px;}
+.left-col ul {margin: 0 0 20px 0; padding:0; width: 170px;}
 .left-col li li ul {padding-left:8px;}
 .left-col li li li { background: url(/Res/arrow_icon.gif) 0px center no-repeat; border-top: 2px solid #fff;border-bottom: 2px solid #fff;padding: 3px 0 3px 10px;}
 .left-col li li li a {font-size:11px;padding: 0px 5px 0px 5px;color: #1A1A1A;text-decoration:none;text-indent:13px;}
@@ -96,6 +96,14 @@ div {float:left}
 .left-col .cc-m-NonLink { margin-top: 20px; display: block; color: #808080;}
 .left-col ul li.sel {background-color: #E2E1D9;font-weight: bold; background-image: none; }
 .left-col span.cc-m-NonLink  {margin-left: 7px; margin-top: 15px;}
+
+.left-col ul {width: 100%!important;}
+.left-col li {list-style: none;}
+.left-col li a {display: block; padding: 5px 10px; text-decoration: none;}
+.left-col li a:hover {background-color: #E3E2DA;}
+.left-col li .selected {background-color: #E3E2DA;}
+
+.left-col nav > div {width: 100%;}
 
 .emph {font-weight: bold; color: #8E8E88;}
 
@@ -135,6 +143,9 @@ a {color: #000;  font-size: 90%;}
 .textcontentcontrol{width:100%;}
 .textcontentcontrol .input input {width:70%;} 
 .textcontentcontrol .input label {width:29%;} 
+
+.moduleInstance, .pageproperties {border: 1px #CCC solid; background: #FFF; padding: 15px;}
+
 
 
 .browseImage {width:100%;position:relative;}
