--- a/OneMainWeb/OneMain.Master
+++ b/OneMainWeb/OneMain.Master
@@ -10,11 +10,22 @@
     <title></title>
     <link href="/Utils/one.css" type="text/css" rel="stylesheet" media="all" />
     <link href="/Content/themes/base/jquery-ui.css" type="text/css" rel="stylesheet" media="all"  />
+    <!-- Bootstrap core CSS -->
+    <link href="Utils/bootstrap.min.css" rel="stylesheet">
+	
+    <!-- Custom styles for this template -->
+    <link href="Utils/dashboard.css" rel="stylesheet">
 
-    
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+	
     <script type="text/javascript" src="/Scripts/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="/Scripts/jquery-ui-1.10.4.min.js"></script>
     <script type="text/javascript" src="/Scripts/jquery.validate.min.js"></script> 
+	<script src="JavaScript/bootstrap.min.js"></script>
 	
 	<style type="text/css">
     	.browser-link { display: block;padding: 4px;padding-top: 110px;background-repeat: no-repeat;background-position: center top;text-decoration: none;text-align: center; }
@@ -23,31 +34,45 @@
 </head>
 <body>
     <form id="form1" runat="server">
-        <div class="head">
-            <div>
-                <div class="LoginName">
-                    <img src="../res/one_logo.gif" alt="One.NET" style="float: left;" />
-                    <div class="leftpart">
-                        <span class="help"><asp:Hyperlink ID="HyperLinkHelp" Target="_blank" NavigateUrl="http://prirocnik.renderspace.net" runat="server" EnableViewState="false"></asp:Hyperlink></span>
-                        <span class="version"><asp:Literal ID="LiteralAppVersion" runat="server" EnableViewState="false"></asp:Literal></span>
-                        <strong><asp:LoginName ID="LoginName1" runat="server" /></strong> 
-                        <asp:LoginStatus ID="LoginStatus1" runat="server" LogoutAction="RedirectToLoginPage" />
-                    </div>
-                    </div>
-                    <div class="headSelect">
-                        <asp:DropDownList CssClass="headSelect" runat="server" ID="DropDownListWebSiteCombined" AutoPostBack="true" OnSelectedIndexChanged="DropDownListWebSiteCombined_SelectedIndexChanged"></asp:DropDownList>
-                        <asp:Label runat="server" ID="LabelWebSiteDescription" Visible="false"></asp:Label>
-                    </div>
-            </div>
-        </div>
-   <div class="all">
-       <section class="left-col">
+
+		
+		<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+		  <div class="container-fluid">
+			<div class="navbar-header">
+			  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			  </button>
+			  <a class="navbar-brand" href="#"><img src="../res/one_logo.gif" alt="One.NET" style="float: left;" /><asp:Literal ID="LiteralAppVersion" runat="server" EnableViewState="false"></asp:Literal></a>
+			</div>
+			<div class="navbar-collapse collapse">
+			  <ul class="nav navbar-nav navbar-right">
+				<li><a><asp:LoginName ID="LoginName1" runat="server" /></a></li>
+				<li><a><asp:DropDownList CssClass="headSelect" runat="server" ID="DropDownListWebSiteCombined" AutoPostBack="true" OnSelectedIndexChanged="DropDownListWebSiteCombined_SelectedIndexChanged"></asp:DropDownList>
+                        <asp:Label runat="server" ID="LabelWebSiteDescription" Visible="false"></asp:Label></a></li>
+				<li><asp:Hyperlink ID="HyperLinkHelp" Target="_blank" NavigateUrl="http://prirocnik.renderspace.net" runat="server" EnableViewState="false"></asp:Hyperlink></li>
+				<li><asp:LoginStatus ID="LoginStatus1" runat="server" LogoutAction="RedirectToLoginPage" /></li>
+			  </ul>
+			</div>
+		  </div>
+		</div>
+   <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-3 col-md-2 sidebar">
            <nav>
-                <asp:Menu ID="Menu1" runat="server" DataSourceID="SiteMapDataSource1" 
+
+			<p style="display: none">
+ ID="Menu2" runat="server" DataSourceID="SiteMapDataSource1" CssClass="nav nav-sidebar"
                     ItemWrap="True" StaticDisplayLevels="4" IncludeStyleBlock="false" EnableViewState="false" 
-                    RenderingMode="List" SkipLinkText="">
-                </asp:Menu>
-               <ul>
+                    RenderingMode="List" SkipLinkText=""
+                </p>
+				
+				<asp:Menu ID="Menu1" runat="server" DataSourceID="SiteMapDataSource1" CssClass="nav nav-sidebar"
+                    ItemWrap="True" StaticDisplayLevels="3" IncludeStyleBlock="false" EnableViewState="false" />
+  
+               <ul class="nav nav-sidebar">
                     <li>
                         <span>Table</span>
                             <cc2:VirtualTableList runat="server" ID="VirtualTableList1"></cc2:VirtualTableList>
@@ -57,11 +82,12 @@
             <div style="margin-top: 20px; margin-left: 10px;">
                 <asp:Button ID="Button1" runat="server" OnClick="Button1_Click" Text="$clear_preview_cache" />
             </div>
-        </section>
-        <section class="right-col">
+        </div>
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <asp:contentplaceholder id="ContentPlaceHolder1" runat="server" />
-        </section>
+        </div>
         <asp:SiteMapDataSource ID="SiteMapDataSource1" runat="server" SiteMapProvider="AspNetXmlSiteMapProvider" />
+	 </div>
     </div>
     <script type="text/javascript" src="/ckeditor4/ckeditor.js"></script>
     <script type="text/javascript" src="/JavaScript/one.js"></script>
